# CoIKS-Surg

./: CMakeLists.txt  README.md  package.xml
include/coiks/: coiks.hpp  ik_solver.hpp  solver_base.hpp  solver_options.hpp
include/hqp/: hqp_ik.hpp
include/hqp/interfaces/: hqp_casadi.hpp
include/invj/: invj_ik.hpp
include/invj/interfaces/: invj_pinocchio.hpp
include/nlo/: nlo_ik.hpp
include/nlo/interfaces/: nlo_casadi.hpp
launch/: coiks_constrained_benchmark.launch  coiks_unconstrained_benchmark.launch
sim/: robot1_endoscope.ttt
src/: coiks.cpp  constrained_benchmark.cpp  unconstrained_benchmark.cpp
urdf/: robot1_endoscope.urdf  robot2_openrst.urdf  robot3_hyperrst.urdf
