<?xml version="1.0"?>
<package format="2">
  <name>coiks</name>
  <version>0.0.0</version>
  <description>The coiks package. A benchmark for concurrent inverse kinematics solvers</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="colan@robo.mein.nagoya-u.ac.jp"> Jacinto Colan </maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pinocchio</depend>
  <depend>kdl_parser</depend>
  <depend>eigen_conversions</depend>
  <depend>liborocos-kdl-dev</depend>
  <depend>liborocos-kdl</depend>
  <depend>trac_ik_lib</depend>
  <depend>casadi</depend>

</package>
